Fixed style
Fixed white space under home page.
Added right color.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
   }
   
   .nav {
-    border-top: solid 10px #4299bd;
+    border-top: solid 10px #3E9ABE;
   }
   
   nav ul li:hover {
@@ -50,9 +50,13 @@ body {
   }
   
   .hb-blue-text {
-    color: #4299bd;
+    color: #4299bd !important;
   }
   
+  .hb-blue {
+    background-color: #3E9ABE !important;
+  }
+
   .content {
     background-color: white;
   }
@@ -96,7 +100,7 @@ body {
 
 .content {
   display: flex;
-  min-height: 100vh;
+  min-height: 30vh;
   flex-direction: column;
   flex: 1 0 auto;
 }
